<resources>
    <string name="app_name">Guru</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="action_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="nav_home">Home</string>
    <string name="nav_tracks">Tracks</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_journal">Journal</string>
    <string name="swamij">Swami Jnaneshvara Bharati</string>
    <string name="logoURL">https://logomakr.com/7LiBI2</string>
    <string name="logo2">https://logomakr.com/4QYwX9</string>
    <string name="self_observation">SELF OBSERVATION</string>
    <string name="self_observation1"> Lovingly serve others today.</string>
    <string name="self_observation2">Observe one of the yamas (non-violence, truthfulness, non-stealing, continence or Brahmacharya, nonmaterialism), directing your actions and speech, while observing your thoughts.</string>
    <string name="self_observation3">Allow your actions to come from conscious choice rather than as a result of habit.</string>
    <string name="self_observation4">Observe one of the niyamas (purity, contentment, training senses, self-study, surrender)</string>
    <string name="self_observation5">Observe all of your actions and ask yourself, “why am I doing this action?”</string>
    <string name="self_observation6">Observe one of the five elements (earth, water, fire, air, space), externally and internally.</string>
    <string name="self_observation7">Witness everything, external and internal.</string>
    <string name="self_observation8">Observe one of the five cognitive senses (hearing, touching, seeing, tasting, smelling).</string>
    <string name="self_observation9">Be aware of your breath today, noticing its qualities and how it relates to thoughts and emotions.</string>
    <string name="self_observation10">Observe one of the five active senses (speaking, grasping, moving, reproducing, eliminating).</string>
    <string name="self_observation11">Notice how fears can control you, and how fears are related to imagination.</string>
    <string name="self_observation12">Observe one of the four functions of mind (manas, chitta, ahamkara, buddhi).</string>
    <string name="self_observation13">Speak very little today—only what is accurate, purposeful, and non-hurting.</string>
    <string name="self_observation14">Observe your reactions when a desire, expectation, want, or need is or is not fulfilled.</string>
    <string name="self_observation15">Observe your gestures and body language, noticing how they reflect thoughts and emotions.</string>
    <string name="self_observation16">Observe one of the yamas (non-violence,truthfulness,non-stealing, continence or Brahmacharya, nonmaterialism), directing your actions and speech, while observing your thoughts.</string>
    <string name="self_observation17">Practice one-pointedness, paying attention to whatever you are doing today.</string>
    <string name="self_observation18">Observe one of the niyamas (purity,contentment, training senses, self-study, surrender)</string>
    <string name="self_observation19">Resolve that today “I will love every one and not hate anyone today.”</string>
    <string name="self_observation20">Observe one of the five elements (earth, water, fire, air, space), externally and internally.</string>
    <string name="self_observation21">Observe whether your “first thoughts” or “second thoughts” are good or bad, clear or clouded.</string>
    <string name="self_observation22">Observe one of the five cognitive senses (hearing, touching, seeing, tasting, smelling).</string>
    <string name="self_observation23">Be aware of the principle of meditation in action.</string>
    <string name="self_observation24">Observe one of the five active senses (speaking, grasping, moving, reproducing, eliminating).</string>
    <string name="self_observation25">Be aware of how you adjust to changing circumstances around you.</string>
    <string name="self_observation26">Observe one of the four functions of mind (manas, chitta, ahamkara, buddhi).</string>
    <string name="self_observation27">Observe how you relate to other people.</string>
    <string name="self_observation28">Observe your reactions when a desire, expectation, want, or need is or is not fulfilled.</string>
    <string name="self_observation29">Notice which thoughts coming into your mind are “useful” or “not useful.”</string>
    <string name="self_observation30">Choose one of the primitive fountains (food, sleep, sex, self-preservation) and observe how it affects your other desires, emotions, thoughts, speech, and actions.</string>
    <string name="self_observation31">Witness everything, external and internal (in months which have 31 days).</string>
    <string name="internal_dialogue">INTERNAL DIALOGUE</string>
    <string name="internal_dialogue1">Dialogue with yourself about mistakes you have made. Don’t condemn yourself or be judgmental.</string>
    <string name="internal_dialogue2">When sitting for meditation, ask your mind to go to, and to heal aching parts. When you attempt sushumna application, ask your mind to focus on the nose bridge.</string>
    <string name="internal_dialogue3">Ask yourself, “what do I want?” Raise questions about the purpose of life.</string>
    <string name="internal_dialogue4">Explain to your mind that it is too worldly and materialistic.</string>
    <string name="internal_dialogue5">Train the senses by using dialogue; actually dialogue with the individual ten senses.</string>
    <string name="internal_dialogue6">Ask yourself if you want to meditate, to explore, to know yourself, and to choose your habits.</string>
    <string name="internal_dialogue7">Ask how you think, why you are emotional, and what the problems are with your mind.</string>
    <string name="internal_dialogue8">Establish a relationship, a friendship with your mind; learn to love by being gentle with yourself.</string>
    <string name="internal_dialogue9">Ask yourself, “what do I want?” This may relate to small things or to the purpose of life.</string>
    <string name="internal_dialogue10">Tell the mind that it has become dissipated, and should tread the path of light, love, and devotion.</string>
    <string name="internal_dialogue11">Self-counsel about negative emotions. When upset, ask, “why am I thinking like this?”</string>
    <string name="internal_dialogue12">Ask your mind to open a blocked nostril for you. Ask your mind to flow with the breath.</string>
    <string name="internal_dialogue13">Consider some problem and ask your mind “what are some solutions? what should I do?”.</string>
    <string name="internal_dialogue14">Dialogue with that whatever is being observed, including mental objects and thoughts.</string>
    <string name="internal_dialogue15">Ask yourself, “what do I want?” Remind yourself of your real identity.</string>
    <string name="internal_dialogue16">Ask yourself why you are doing certain actions. How do the actions reflect thoughts and emotions?</string>
    <string name="internal_dialogue17">Say to your mind, “please be my friend.” How does your mind respond?</string>
    <string name="internal_dialogue18">Ask your mind what you have to do. Ask why you sometimes do not do what you want to do.</string>
    <string name="internal_dialogue19">When distracting thoughts come, remind yourself of your purpose; tell yourself that this thought or desire is distracting and will lead you to a fantasy.</string>
    <string name="internal_dialogue20">Ask “does my ego get in my way or not?” Spend a few minutes simply being honest with yourself.</string>
    <string name="internal_dialogue21">Ask yourself, “what do I want?” This may relate to small things or to the purpose of life.</string>
    <string name="internal_dialogue22">Ask why you become emotionally disorganized, forget things, and do not attend to things properly.</string>
    <string name="internal_dialogue23">When sitting for meditation, say to your mind, “mind, please go beyond the senses.”</string>
    <string name="internal_dialogue24">While doing breathing practices ask your mind to “please flow with the breath.”</string>
    <string name="internal_dialogue25">Make a contract with the mind to let the mind whisper those inner secrets to you, and put all things in front of your mind. Discuss this “contract” with your mind.</string>
    <string name="internal_dialogue26">Ask the mind why it disturbs you in meditation. How can meditation be improved?</string>
    <string name="internal_dialogue27">Ask yourself, “what do I want?” You will learn many things when you dialogue.</string>
    <string name="internal_dialogue28">Consider some choices you face in life and ask buddhi, “should I do it or not?”</string>
    <string name="internal_dialogue29">Ask “is my first thought good or bad—is it clear or clouded?” Your second or third thoughts?</string>
    <string name="internal_dialogue30">Ask your mind what your fears are and what to do with them.</string>
    <string name="internal_dialogue31">Say to your mind “please be my friend.” (in months with have 31 days )</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="meditation3min">3-Minute Meditation</string>
    <string name="meditation7min">7-Minute Meditation</string>
    <string name="meditation11min">11-minute Meditation</string>
    <string name="survey_of_body">Survey of Body</string>
    <string name="_61points">61 Points</string>
    <string name="ascending_breath">Ascending Breath</string>
    <string name="login">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="incorrect_password">Email and password combination is incorrect</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="or">OR</string>
    <string name="your_name">Your name</string>
    <string name="password_reenter">Re-enter password</string>
    <string name="register">Register</string>
    <string name="already_have_account">I already have an account</string>
    <string name="confirmation_email1">A confirmation link has been sent to your email address. </string>
    <string name="confirmation_email2">Open your email and click on the link to finish registration.</string>
    <string name="assessment_for_each_of_the_areas">For each of the areas of self-assessment, have the following orientations of what to look for:</string>
    <string name="areas_of_assessment_bullet_1">• What am I doing well that I need to continue doing?</string>
    <string name="areas_of_assessment_bullet_2">• What am I doing that I need to do more of?</string>
    <string name="areas_of_assessment_bullet_3">• What am I doing that I need to reduce or stop doing entirely?</string>
    <string name="areas_of_assessment_bullet_4">• What am I not doing that I need to start doing?</string>
    <string name="areas_of_assessment_bullet_5">• In what way does this relate to my current situation?</string>
    <string name="areas_of_assessment_bullet_6">• How might I plan with this in relation to my future situation?</string>
    <string name="frequency_of_assessments">Frequency of Self-Assessments</string>
    <string name="frequency_bullet1">• Initial Self-Assessment with coach</string>
    <string name="frequency_bullet2">• Ongoing Self-Assessment and training</string>
    <string name="frequency_bullet3">• Monthly scanning Self-Assessment</string>
    <string name="frequency_bullet4">• Quarterly complete Self-Assessment and needs analysis</string>
    <string name="frequency_bullet5">• Annual thorough Self-Assessment with coach</string>
</resources>