<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Main.HomeFragment">


    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:id="@+id/self_obs_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/pixels8"
        android:layout_marginRight="@dimen/pixels8"
        android:orientation="vertical"
        android:layout_gravity="center">


        <ImageView
            android:id="@+id/self_obs_img"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/self_obs_logo" />

        <TextView
            android:id="@+id/self_obs_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/pixels16"
            android:text="@string/self_observation"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/self_observation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/pixels16"
            android:layout_marginRight="@dimen/pixels16"
            android:layout_marginBottom="@dimen/pixels24"
            android:gravity="center"
            android:text="@string/self_observation1"
            android:textSize="24sp" />

    </LinearLayout>

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:id="@+id/int_dial_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/pixels8"
        android:layout_marginRight="@dimen/pixels8"
        android:orientation="vertical"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/int_dial_img"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/internal_dial_logo" />

        <TextView
            android:id="@+id/int_dial_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/pixels16"
            android:text="@string/internal_dialogue"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/internal_dialogue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/pixels16"
            android:layout_marginRight="@dimen/pixels16"
            android:layout_marginBottom="@dimen/pixels24"
            android:gravity="center"
            android:text="@string/internal_dialogue1"
            android:textSize="24sp" />
    </LinearLayout>

    <View
        android:id="@+id/view6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>


</LinearLayout>